Change projects properties to go on Glassfish 4

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,4 +37,5 @@ project.SupCooking-war=SupCooking-war
 reference.SupCooking-ejb.dist-ear=${project.SupCooking-ejb}/dist/SupCooking-ejb.jar
 reference.SupCooking-war.dist-ear=${project.SupCooking-war}/dist/SupCooking-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
